--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Files and directories created by pub
 .dart_tool/
+node_modules
 .packages
 # Remove the following pattern if you wish to check in your lock file
 pubspec.lock
